# auki_robotics_g1_humanoid_ros2

./: README.md
.devcontainer/: devcontainer.json
docker/: dockerfile.dev  dockerfile.foxglove  g1_entrypoint.sh  setup_unitree.bash
g1_bringup/: CMakeLists.txt  package.xml
g1_bringup/config/map/: octomap_params.yaml
g1_bringup/config/navigation/: empty.yaml  humble_navigation.yaml  octomap_navigation.yaml  stvl_navigation.yaml
g1_bringup/config/sensors/: mid360_config.json  pc_to_scan.yaml  realsense.yaml
g1_bringup/launch/: g1_robot.launch.py
g1_bringup/launch/map/: amcl.launch.py  navigation.launch.py  octomap.launch.py
g1_bringup/launch/sensors/: mid360.launch.py
g1_control_cpp/: CMakeLists.txt  README.md  g1_control_cpp.xml  package.xml
g1_control_cpp/include/g1_control_cpp/: g1_arm_sdk.hpp
g1_control_cpp/launch/: g1_control.launch.py
g1_control_cpp/src/: g1_arm_sdk.cpp  motor_crc_hg.cpp
g1_control_py/: README.md  package.xml  setup.cfg  setup.py
g1_control_py/g1_control_py/: cmd_vel_translator.py  dummy_joint_state.py  goal_pose_republisher.py  init_pelvis_pose.py  lowstate_translator.py  odom_translator.py
g1_description/: CMakeLists.txt  package.xml
g1_description/launch/: g1_description.launch.py
g1_description/urdf/: g1_body29_hand14.urdf  g1_body29_hand14.xml
g1_moveit_config/: .setup_assistant  package.xml
g1_moveit_config/config/: g1.ros2_control.xacro  g1.srdf  g1.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
g1_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  ros2_control.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
