<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="3">
  <name>g1_bringup</name>
  <version>0.0.0</version>
  <description>G1 Robot ROS2 Bringup</description>
  <maintainer email="sam@aukilabs.com">Sam Choy</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2launch</depend>
  <depend>g1_control_py</depend>
  <depend>g1_description</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>