<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="3">
  <name>g1_control_py</name>
  <version>0.0.0</version>
  <description>G1 High Level Control</description>
  <maintainer email="sam@aukilabs.com">Sam Choy</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_api</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
