<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="3">
  <name>g1_description</name>
  <version>0.0.0</version>
  <description>URDF description of Unitree G1 Humanoid</description>
  <maintainer email="sam@aukilabs.com">Sam Choy</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>ros2launch</depend>
  <depend>robot_state_publisher</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>